Added to directional derivative, fixed definition for critical points.

--- a/MXB105 Exam Notes.tex
+++ b/MXB105 Exam Notes.tex
@@ -203,19 +203,19 @@
     \begin{equation*}
         \pdv{f}{t_i} = \symbf{\nabla}f \cdot \partial_{t_i}\symbfit{x}.
     \end{equation*}
-    \subsubsection*{Directional Derivative}
+    \subsubsection*{Directional Derivatives}
     \begin{align*}
         \symbf{\nabla}_{\symbfit{u}}f
          & = \symbf{\nabla}f \cdot \symbfit{u}
     \end{align*}
     where $\symbfit{u}$ is a unit vector and the slope is given by $\norm{\symbf{\nabla}_{\symbfit{u}}f}$.
-    \subsubsection*{Direction of Greatest Ascent}
+    If $\symbf{\nabla}_{\symbfit{u}}f=0$, $\symbfit{u}$ is tangent to the level curve at $\symbfit{x}_0$.
     \begin{align*}
         \max_{\norm{\symbfit{u}} = 1} \symbf{\nabla}_{\symbfit{u}}f = \symbf{\nabla}f
     \end{align*}
-    where the slope is given by $\norm{\symbf{\nabla}_{\symbfit{u}}f}$.
+    If $\symbf{\nabla}f\neq 0$, $\symbf{\nabla}f$ is a normal vector to the level curve at $\symbfit{x}_0$.
     \subsubsection*{Critical Points}
-    $(x_0,\: y_0)$ is a critical point if $\symbf{\nabla}f(x_0,\: y_0) = 0$
+    $(x_0,\: y_0)$ is a critical point if $\symbf{\nabla}f(x_0,\: y_0) = \symbf{0}$
     or if $\symbf{\nabla}f(x_0,\: y_0)$ is undefined.
     \subsubsection*{Classification of Critical Points}
     \begin{equation*}
