--- a/MXB105 Exam Notes Alternate.tex
+++ b/MXB105 Exam Notes Alternate.tex
@@ -1,6 +1,6 @@
 %!TEX program = xelatex
 \documentclass{article}
-\usepackage{template}
+\usepackage{LaTeX-Submodule/template}
 \usepackage{changepage} % Modify page width
 \usepackage{multicol}
 
