--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -1,6 +1,6 @@
 %!TEX program = xelatex
 \documentclass{article}
-\usepackage{template}
+\usepackage{LaTeX-Submodule/template}
 
 \usepackage{chngcntr} % Reset counter within sections
 \usepackage{multicol}
