--- a/MXB105 Exam Notes Alternate.tex
+++ b/MXB105 Exam Notes Alternate.tex
@@ -1,56 +1,39 @@
 %!TEX program = xelatex
 \documentclass{article}
 \usepackage{LaTeX-Submodule/template}
-\usepackage{changepage} % Modify page width
-\usepackage{multicol}
 
-\usepackage{titlesec}
+% Additional packages and macros
+\usepackage{changepage} % Modify page width
+\usepackage{multicol} % Use multiple columns
+\usepackage{titlesec} % Modify section heading styles
 
 \geometry{
 	a4paper,
 	margin = 10mm
 }
 
-% Create nice frames
-\usepackage{mdframed}
-\mdfsetup{skipabove=\topskip,skipbelow=\topskip}
-\mdfdefinestyle{exampledefault}{%
-	rightline=true,
-	innerleftmargin=10,innerrightmargin=10,
-	leftmargin=20,rightmargin=20,
-	topline=false,bottomline=false,
-	frametitlefont=\bf\large
-}
-\mdfdefinestyle{exampledefaultcols}{%
-	rightline=false,leftline=true,
-	innerleftmargin=5,innerrightmargin=5,
-	leftmargin=0,rightmargin=0,
-	topline=false,bottomline=false,
-	frametitlefont=\bf\large
-}
+\pagenumbering{gobble}
 
 \usepackage{tikz}
 \usetikzlibrary{quotes,angles}
 
-\pagenumbering{gobble}
-
-\setlength\columnsep{4pt}
+\setlength{\columnsep}{4pt}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0pt}
 
-\titleformat*\subsubsection{\raggedright\bfseries}
+\titleformat*\section{\raggedright\bfseries}
 
 \begin{document}
-\titlespacing*\subsubsection{0pt}{1ex}{1ex}
-
+\titlespacing*\section{0pt}{1ex}{1ex}
+%
 \setlength{\abovecaptionskip}{-5pt}
 \setlength{\textfloatsep}{0pt}
-
+%
 \setlength{\abovedisplayskip}{1pt}
 \setlength{\belowdisplayskip}{1pt}
-
+%
 \begin{multicols}{3}
-    \subsubsection*{Derivative Rules}
+    \section*{Derivative Rules}
     \begin{table}[H]
         \centering
         \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
@@ -70,7 +53,7 @@
             \bottomrule
         \end{tabular}
     \end{table}
-    \subsubsection*{Trigonometric Identities}
+    \section*{Trigonometric Identities}
     \begin{align*}
         1                        & = \sin^2{\left( x \right)} + \cos^2{\left( x \right)} \\
         \sin{\left( 2x \right)}  & = 2\sin{\left( x \right)}\cos{\left( x \right)}       \\
@@ -78,72 +61,72 @@
         \sin^2{\left( x \right)} & = \frac{1-\cos{\left( 2x \right)}}{2}                 \\
         \cos^2{\left( x \right)} & = \frac{1+\cos{\left( 2x \right)}}{2}
     \end{align*}
-    \subsubsection*{Partial Fraction Decomposition}
+    \section*{Partial Fraction Decomposition}
     \begin{align*}
-        \frac{p(x)}{(x+a)(x+b)} &= \frac{A}{x+a} + \frac{B}{x+b}
+        \frac{p(x)}{(x+a)(x+b)} & = \frac{A}{x+a} + \frac{B}{x+b}
     \end{align*}
-    \subsubsection*{Integration Techniques}
+    \section*{Integration Techniques}
     \begin{align*}
-        \int u \dv{v}{x}\dd{x} &= uv - \int v \dv{u}{x}\dd{x}
+        \int u \dv{v}{x}\dd{x} & = uv - \int v \dv{u}{x}\dd{x}
     \end{align*}
     \begin{align*}
         \int f\bigl(g\left( x \right)\bigr)\dv{g(x)}{x} \dd{x} & = \int f(u) \dv{u}{x}\dd{x}
     \end{align*}
     where $u = g(x)$.
-    \subsubsection*{Trigonometric Substitutions}
+    \section*{Trigonometric Substitutions}
     Substitute the appropriate value in and find that the value under the root is now square.
     Calculate $\dv{x}{\theta}$ to change the variable.
     Use substitution to find the new limits.
 
     Sine ($a^2-b^2x^2$, $x=\frac{a}{b}\sin{\left( \theta \right)}$)
     \begin{center}
-    \begin{tikzpicture}[scale=0.5]
-        \coordinate (A) at (-1.5cm,-1.0cm);
-        \coordinate (B) at (1.5cm,1.0cm);
-        \coordinate (C) at (1.5cm,-1.0cm);
-        \draw (A) -- node[above]{\( a \)}
-          (B)--node[right]{\( x \)}
-          (C)--node[below]{\( \sqrt{a^2-x^2} \)}(A);
-        \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
-          {angle=C--A--B};
-        \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
-    \end{tikzpicture}
+        \begin{tikzpicture}[scale=0.5]
+            \coordinate (A) at (-1.5cm,-1.0cm);
+            \coordinate (B) at (1.5cm,1.0cm);
+            \coordinate (C) at (1.5cm,-1.0cm);
+            \draw (A) -- node[above]{\( a \)}
+            (B) -- node[right]{\( x \)}
+            (C) -- node[below]{\( \sqrt{a^2-x^2} \)}(A);
+            \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
+                {angle=C--A--B};
+            \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
+        \end{tikzpicture}
     \end{center}
 
     Tangent ($a^2+b^2x^2$, $x=\frac{a}{b}\tan{\left( \theta \right)}$)
     \begin{center}
-    \begin{tikzpicture}[scale=0.5]
-        \coordinate (A) at (-1.5cm,-1.0cm);
-        \coordinate (B) at (1.5cm,1.0cm);
-        \coordinate (C) at (1.5cm,-1.0cm);
-        \draw (A) -- node [above, rotate=33] {\( \sqrt{a^2+x^2} \)} (B);
-        \draw (B)--node[right]{\( x \)} (C);
-        \draw (C)--node[below]{\( a \)}(A);
-        \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
-              {angle=C--A--B};
-        \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
-    \end{tikzpicture}
+        \begin{tikzpicture}[scale=0.5]
+            \coordinate (A) at (-1.5cm,-1.0cm);
+            \coordinate (B) at (1.5cm,1.0cm);
+            \coordinate (C) at (1.5cm,-1.0cm);
+            \draw (A) -- node [above, rotate=33] {\( \sqrt{a^2+x^2} \)} (B);
+            \draw (B) -- node[right]{\( x \)} (C);
+            \draw (C) -- node[below]{\( a \)}(A);
+            \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
+                {angle=C--A--B};
+            \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
+        \end{tikzpicture}
     \end{center}
 
     Secant ($b^2x^2-a^2$, $x=\frac{a}{b}\sec{\left( \theta \right)}$)
     \begin{center}
-    \begin{tikzpicture}[scale=0.5]
-        \coordinate (A) at (-1.5cm,-1.0cm);
-        \coordinate (B) at (1.5cm,1.0cm);
-        \coordinate (C) at (1.5cm,-1.0cm);
-        \draw (A) -- node[above]{\( x \)}
-              (B)--node[below, rotate=90]{\( \sqrt{x^2-a^2} \)}
-              (C)--node[below]{\( a \)}(A);
-        \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
-              {angle=C--A--B};
-        \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
-    \end{tikzpicture}
+        \begin{tikzpicture}[scale=0.5]
+            \coordinate (A) at (-1.5cm,-1.0cm);
+            \coordinate (B) at (1.5cm,1.0cm);
+            \coordinate (C) at (1.5cm,-1.0cm);
+            \draw (A) -- node[above]{\( x \)}
+            (B) -- node[below, rotate=90]{\( \sqrt{x^2-a^2} \)}
+            (C) -- node[below]{\( a \)}(A);
+            \draw (C) -- (A) -- (B) pic [draw,angle radius=9mm,"\( \theta \)"]
+                {angle=C--A--B};
+            \draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
+        \end{tikzpicture}
     \end{center}
 
-    \subsubsection*{L'H\^opital's Rule}
+    \section*{L'H\^opital's Rule}
     If $\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0$ or $\pm\infty$, then
     $\displaystyle \lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}$.
-    \subsubsection*{Continuity}
+    \section*{Continuity}
     $f(x)$ continuous at $c$ iff $\displaystyle \lim_{x\to c} f(x) = f(c)$.
 
     $f(x)$ is continuous on $I:\left( a,\:b \right)$ if it is continuous
@@ -151,9 +134,9 @@
 
     $f(x)$ is continuous on $I:\left[ a,\:b \right]$ if it is continuous
     for all $x\in I$, but only right continuous at $a$ and left continuous at $b$.
-    \subsubsection*{Intermediate Value Theorem}
+    \section*{Intermediate Value Theorem}
     If $f(x)$ is continuous on $I:\left[ a, \: b \right]$ and $f(a) \leq c \leq f(b)$, then $\exists x\in I:f(x)=c$.
-    \subsubsection*{Differentiability}
+    \section*{Differentiability}
     $f(x)$ is differentiable at $x=x_0$ iff
     \begin{equation*}
         f'(x_0) = \lim_{x\to x_0} \frac{f(x)-f(x_0)}{x-x_0}
@@ -163,28 +146,28 @@
         f'(x_0) = \lim_{h\to 0} \frac{f(x_0+h)-f(x_0)}{h}.
     \end{equation*}
     Differentiability implies continuity.
-    \subsubsection*{Mean Value Theorem}
+    \section*{Mean Value Theorem}
     If $f(x)$ is continuous and differentiable on $I:\left[ a,\:b \right]$, then
     \begin{equation*}
         \exists c\in I:f'(c)=\frac{f(b)-f(a)}{b-a}.
     \end{equation*}
-    \subsubsection*{Definite Integrals}
+    \section*{Definite Integrals}
     \begin{equation*}
         A = \int_a^b f(x) \dd{x}
     \end{equation*}
-    \subsubsection*{Fundamental Theorem of Calculus}
+    \section*{Fundamental Theorem of Calculus}
     \begin{align*}
         \int_a^b \dv{x}F(x) \dd{x} & = F(b) - F(a) \\
         \dv{x}\int_a^x f(t) \dd{t} & = f(x)
     \end{align*}
-    \subsubsection*{Taylor Polynomials / Series}
+    \section*{Taylor Polynomials / Series}
     \begin{equation*}
         f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k
     \end{equation*}
     The Taylor Series is taking the limit as $n$ goes to infinity of $p_n$.
 
     \textbf{Maclaurin Series:} $x_0 = 0$.
-    \subsubsection*{Common Maclaurin Series}
+    \section*{Common Maclaurin Series}
     \begin{table}[H]
         \centering
         \begin{tabular}{c | c | c}
@@ -201,25 +184,25 @@
         \end{tabular}
     \end{table}
     \textbf{Power Series:} $\sum_{n=0}^{\infty} c_n\left( x-x_0 \right)^n$
-    \subsubsection*{Series Tests}
+    \section*{Series Tests}
     For a series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$:
-    \subsubsection*{Alternating Series Test}
+    \section*{Alternating Series Test}
     Given $a_i = \left( -1 \right)^i b_i$ and $b_i>0$.
 
     If $b_{i+1}\leqslant b_i$ \& $\lim_{i\to\infty}b_i=0$, then
     convergent, else inconclusive.
-    \subsubsection*{Ratio Test}
+    \section*{Ratio Test}
     Given $\rho = \lim_{i\to\infty}\abs{\frac{a_{i+1}}{a_i}}$:
     \begin{align*}
         \rho < 1 & : \text{convergent}   \\
         \rho > 1 & : \text{divergent}    \\
         \rho = 1 & : \text{inconclusive}
     \end{align*}
-    \subsubsection*{Multivariable Functions}
+    \section*{Multivariable Functions}
     \textbf{Partial Derivatives} are done w.r.t one variable, other variables unchanged.
 
     The \textbf{Gradient} is $\symbf{\nabla}f = \avec[\big]{\pdv{f}{x},\: \pdv{f}{y},\: \dots}$
-    \subsubsection*{Level Curves}
+    \section*{Level Curves}
     \begin{equation*}
         L_c\left( f \right) = \bigl\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\bigr\}
     \end{equation*}
@@ -227,13 +210,13 @@
     $\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L$ along any smooth
     curve. The limit does not exist if $L$ changes along different smooth curves.
 
-    \subsubsection*{Multivariable Chain Rule}
+    \section*{Multivariable Chain Rule}
     For $\pdv{f}{s}$, create a tree from $f$ to the variable $s$.
     On each edge, where the node above is $a$ and below is $b$, each edge is $\pdv{a}{b}$.
     Traverse each path between $f$ and $s$ and multiply the edges.
     Add each path together.
     (i.e. for $f(x, y), x(s,t), y(s,t)$, $\pdv{f}{s} = \pdv{f}{x}\pdv{x}{s}+\pdv{f}{y}\pdv{y}{s}$)
-    \subsubsection*{Directional Derivatives}
+    \section*{Directional Derivatives}
     \begin{align*}
         \symbf{D}_{\symbfit{u}}f = \symbf{\nabla}_{\symbfit{u}}f
          & = \symbf{\nabla}f \cdot \symbfit{u}
@@ -244,10 +227,10 @@
         \max_{\norm{\symbfit{u}} = 1} \symbf{\nabla}_{\symbfit{u}}f = \symbf{\nabla}f
     \end{align*}
     If $\symbf{\nabla}f\neq 0$, $\symbf{\nabla}f$ is a normal vector to the level curve at $\symbfit{x}_0$.
-    \subsubsection*{Critical Points}
+    \section*{Critical Points}
     $(x_0,\: y_0)$ is a critical point if $\symbf{\nabla}f(x_0,\: y_0) = \symbf{0}$
     or if $\symbf{\nabla}f(x_0,\: y_0)$ is undefined.
-    \subsubsection*{Classification of Critical Points}
+    \section*{Classification of Critical Points}
     \begin{equation*}
         D = f_{xx}f_{yy} - \left( f_{xy} \right)^2
     \end{equation*}
@@ -257,7 +240,7 @@
         \item[$D < 0$:] saddle point
         \item[$D = 0$:] inconclusive
     \end{description}
-    \subsubsection*{Double Integrals}
+    \section*{Double Integrals}
     The volume of the solid
     enclosed between the surface $z=f(x,\: y)$ and the region $\Omega$ is
     defined by
@@ -269,7 +252,7 @@
         \iint\limits_{\Omega} f(x,\: y) \dd{A} & = \int_c^d\int_a^b f(x,\: y) \dd{x} \dd{y} \\
                                                & = \int_a^b\int_c^d f(x,\: y) \dd{y} \dd{x}
     \end{align*}
-    \subsubsection*{Type I Regions}
+    \section*{Type I Regions}
     \begin{equation*}
         \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_a^b\int_{g_1(x)}^{g_2(x)} f(x,\: y) \dd{y} \dd{x}
     \end{equation*}
@@ -282,7 +265,7 @@
         y=g_1(x) \text{ and } y=g_2(x)
     \end{equation*}
     where $g_1(x) \leq g_2(x)$ for $a \leq x \leq b$:
-    \subsubsection*{Type II Regions}
+    \section*{Type II Regions}
     \begin{equation*}
         \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_c^d\int_{h_1(x)}^{h_2(x)} f(x,\: y) \dd{x} \dd{y}
     \end{equation*}
@@ -297,7 +280,7 @@
     where $h_1(y) \leq h_2(y)$ for $c \leq y \leq d$.
 
     To integrate, solve the inner integrals first.
-    \subsubsection*{Vector Valued Functions}
+    \section*{Vector Valued Functions}
     \begin{equation*}
         \symbf{r}:\mathbb{R} \to \mathbb{R}^n
     \end{equation*}
@@ -308,33 +291,33 @@
     curve as the value of the parameter increases.
 
     \textbf{Limits}, \textbf{derivatives} and \textbf{integrals} are all \textit{component-wise}. Each component has its \underline{own} constant of integration.
-    \subsubsection*{Parametric Lines}
+    \section*{Parametric Lines}
     \begin{equation*}
         \symbf{l}(t) = \symbfit{P}_0 + t\symbfit{v}
     \end{equation*}
     where $\symbf{l}(t)$ passes through $\symbfit{P}_0$, and is parallel to $\symbfit{v}$.
-    \subsubsection*{Tangent Lines}
+    \section*{Tangent Lines}
     If $\symbf{r}(t)$ is differentiable at
     $t_0$ and $\symbf{r'}(t_0)\ne\symbf{0}$
     \begin{equation*}
         \symbf{l}(t) = \symbf{r}(t_0)+t\symbf{r'}(t_0).
     \end{equation*}
-    \subsubsection*{Curves of Intersection}
+    \section*{Curves of Intersection}
     Choose one of the variables as the parameter, and express the remaining variables in terms of that parameter.
-    \subsubsection*{Arc Length}
+    \section*{Arc Length}
     \begin{equation*}
         S = \int_a^b \norm{\symbf{r'}(t)} \dd{t}
     \end{equation*}
-    \subsubsection*{Ordinary Differential Equations}
+    \section*{Ordinary Differential Equations}
     \textbf{Order:} highest derivative in DE.
 
     \textbf{Autonomous DE:} does not depend explicitly on the independent variable.
-    \subsubsection*{Qualitative Analysis}
+    \section*{Qualitative Analysis}
     \begin{equation*}
         \dv{y}{t} = f(y)
     \end{equation*}
     A fixed point is the value of $y$ for which $f(y) = 0$.
-    \subsubsection*{Stability of Fixed Points}
+    \section*{Stability of Fixed Points}
     Given a positive/negative perturbation from a fixed point, that point is
 
     \textbf{Stable:} if both tend toward FP
@@ -342,23 +325,23 @@
     \textbf{Unstable:} if both tend away from FP
 
     \textbf{Semi-Stable:} if one tends toward FP, and another tends away from FP
-    \subsubsection*{Directly Integrable ODEs}
+    \section*{Directly Integrable ODEs}
     For $\dv{y}{x} = f(x)$:
     \begin{equation*}
         y(x) = \int f(x) \dd{x}.
     \end{equation*}
-    \subsubsection*{Separable ODEs}
+    \section*{Separable ODEs}
     For $\dv{y}{x} = p(x) q(y)$:
     \begin{equation*}
         \int \frac{1}{q(y)} \dv{y}{x} \dd{x} = \int p(x) \dd{x}.
     \end{equation*}
-    \subsubsection*{Linear ODEs}
+    \section*{Linear ODEs}
     For $\dv{y}{x} + p(x)y = q(x)$, use the \textit{integrating factor}:
     $I(x) = \e^{\int p(x) \dd{x}}$, so that
     \begin{equation*}
         y(x) = \frac{1}{I(x)} \int I(x) q(x) \dd{x}.
     \end{equation*}
-    \subsubsection*{Exact ODEs}
+    \section*{Exact ODEs}
     $P(x,\: y) + Q(x,\: y)\dv{y}{x} = 0$
     has the solution
     $\Psi(x,\: y) = c$
@@ -370,55 +353,55 @@
         \Psi(x,\: y) = \int Q(x,\: y) \dd{y} + g(x)
     \end{gather*}
     and $f(y)$ and $g(x)$ can be determined by solving these equations simultaneously.
-    \subsubsection*{Second-Order ODEs}
+    \section*{Second-Order ODEs}
     \begin{equation*}
         a_2(x)y'' + a_1(x)y' + a_0(x)y = F(x)
     \end{equation*}
-    \subsubsection*{Initial Values}
+    \section*{Initial Values}
     \begin{align*}
         y(x_0) = y_0 \quad y'(x_0) = y_1
     \end{align*}
-    \subsubsection*{Boundary Values}
+    \section*{Boundary Values}
     \begin{align*}
         y(x_0) = y_0 \quad y(x_1) = y_1
     \end{align*}
-    \subsubsection*{Reduction of Order}
+    \section*{Reduction of Order}
     \begin{equation*}
         y_2(x) = v\left(x\right) y_1(x)
     \end{equation*}
     $v(x)$ can be determined by substituting $y_2$ into the ODE, using $w(x) = v'(x)$.
-    \subsubsection*{General Solution}
+    \section*{General Solution}
     \begin{equation*}
         y(x) = y_H(x) + y_P(x)
     \end{equation*}
-    \subsubsection*{Homogeneous Solution}
+    \section*{Homogeneous Solution}
     \begin{equation*}
         y_H(x) = \e^{\lambda x}
     \end{equation*}
-    \subsubsection*{Real Distinct Roots}
+    \section*{Real Distinct Roots}
     \begin{equation*}
         y_H(x) = c_1\e^{\lambda_1 x} + c_2\e^{\lambda_2 x}
     \end{equation*}
-    \subsubsection*{Real Repeated Roots}
+    \section*{Real Repeated Roots}
     \begin{equation*}
         y_H(x) = c_1\e^{\lambda x} + c_2 t\e^{\lambda x}
     \end{equation*}
-    \subsubsection*{Complex Conjugate Roots}
+    \section*{Complex Conjugate Roots}
     Given $\lambda = \alpha \pm \beta i$:
     \begin{equation*}
         y_H(x) = \e^{\alpha x}\bigl( c_1\cos{\left( \beta x \right)} + c_2 \sin{\left( \beta x \right)} \bigr)
     \end{equation*}
-    \subsubsection*{Particular Solution}
+    \section*{Particular Solution}
     \begin{table}[H]
         \centering
         \begin{tabular}{c | c}
             \toprule
-            $F(x)$                                                             & $y_P(x)$                                                                \\
+            $F(x)$                                                             & $y_P(x)$                               \\
             \midrule
-            constant                                                         & A                                                                       \\
-            polynomial degree $n$                                         & $\displaystyle \sum_{i = 0}^n A_i x^i$                                  \\
-            $\e^{kx}$                                                          & $A \e^{kx}$                                                             \\
-            $\cos{\left( \omega x \right)}$ or $\sin{\left( \omega x \right)}$ & $A_0 \cos{\left( \omega x \right)}$ \\ & $+ A_1 \sin{\left( \omega x \right)}$ \\
+            constant                                                           & A                                      \\
+            polynomial degree $n$                                              & $\displaystyle \sum_{i = 0}^n A_i x^i$ \\
+            $\e^{kx}$                                                          & $A \e^{kx}$                            \\
+            $\cos{\left( \omega x \right)}$ or $\sin{\left( \omega x \right)}$ & $A_0 \cos{\left( \omega x \right)}$    \\ & $+ A_1 \sin{\left( \omega x \right)}$ \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -426,7 +409,7 @@
     If the choice would be linearly dependent to $y_H(x)$, multiply by $x$ until it isn't.
 
     Substitute $y_P$ into the nonhomogeneous ODE, and solve the undetermined coefficients.
-    \subsubsection*{Spring and Mass Systems}
+    \section*{Spring and Mass Systems}
     \begin{equation*}
         m y'' + \gamma y' + k y = f(t)
     \end{equation*}
@@ -439,7 +422,7 @@
         m      & : \text{mass}    & k    & : \text{spring constant} \\
         \gamma & : \text{damping} & f(t) & : \text{external force}
     \end{align*}
-    \subsubsection*{Electrical Circuits}
+    \section*{Electrical Circuits}
     The sum of voltages around a loop equals 0.
     \begin{align*}
         v(t) - iR - L \dv{i}{t} - \frac{q}{C}      & = 0    \\
