Update boxed environments

--- a/MXB105 Exam Notes Alternate.tex
+++ b/MXB105 Exam Notes Alternate.tex
@@ -123,7 +123,7 @@
         \end{tikzpicture}
     \end{center}
 
-    \section*{L'H\^opital's Rule}
+    \section*{L'Hôpital's Rule}
     If $\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0$ or $\pm\infty$, then
     $\displaystyle \lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}$.
     \section*{Continuity}
