--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -52,7 +52,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \centering
     \begin{tabular}{c c}
         \toprule
-        \(f\)                                                                      & \(\dv{f}{x}\)                                    \\
+        \(f\)                                                                      & \(\odv{f}{x}\)                                    \\
         \midrule
         \(x^a\)                                                                    & \(a x^{a-1}\)                                    \\
         \(\sqrt{x}\)                                                               & \(\displaystyle \frac{1}{2\sqrt{x}}\)            \\
@@ -64,14 +64,14 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \end{tabular}
     \begin{tabular}{c c}
         \toprule
-        \(f\)                               & \(\dv{f}{x}\)                                              \\
+        \(f\)                               & \(\odv{f}{x}\)                                              \\
         \midrule
         \(a\)                               & \(0\)                                                      \\
         \(x\)                               & \(1\)                                                      \\
-        \(a_1 u(x) \pm a_2 v(x)\)           & \(\displaystyle a_1\dv{u}{x} \pm a_2\dv{v}{x}\)            \\[8pt]
-        \(u(x)v(x)\)                        & \(\displaystyle \dv{u}{x}v + u\dv{v}{x}\)                  \\[10pt]
-        \(\displaystyle \frac{u(x)}{v(x)}\) & \(\displaystyle \frac{\dv{u}{x}v - u\dv{v}{x}}{{v(x)}^2}\) \\[8pt]
-        \(u\bigl(v\left(x \right) \bigr)\)  & \(\displaystyle \dv{u}{v}\dv{v}{x}\)                       \\[5pt]
+        \(a_1 u(x) \pm a_2 v(x)\)           & \(\displaystyle a_1\odv{u}{x} \pm a_2\odv{v}{x}\)            \\[8pt]
+        \(u(x)v(x)\)                        & \(\displaystyle \odv{u}{x}v + u\odv{v}{x}\)                  \\[10pt]
+        \(\displaystyle \frac{u(x)}{v(x)}\) & \(\displaystyle \frac{\odv{u}{x}v - u\odv{v}{x}}{{v(x)}^2}\) \\[8pt]
+        \(u\bigl(v\left(x \right) \bigr)\)  & \(\displaystyle \odv{u}{v}\odv{v}{x}\)                       \\[5pt]
         \bottomrule
     \end{tabular}
 \end{table}
@@ -80,7 +80,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \centering
     \begin{tabular}{c c}
         \toprule
-        \(f\)                       & \(\dv{f}{x}\)                                        \\
+        \(f\)                       & \(\odv{f}{x}\)                                        \\
         \midrule
         \(\sin{\left( ax \right)}\) & \(a\cos{\left( ax \right)}\)                         \\
         \(\cos{\left( ax \right)}\) & \(-a\sin{\left( ax \right)}\)                        \\
@@ -92,7 +92,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \end{tabular}
     \begin{tabular}{c c}
         \toprule
-        \(f\)                          & \(\dv{f}{x}\)                                   \\
+        \(f\)                          & \(\odv{f}{x}\)                                   \\
         \midrule
         \(\arcsin{\left( ax \right)}\) & \(\displaystyle  \frac{a}{\sqrt{1-a^2x^2}}\)    \\[8pt]
         \(\arccos{\left( ax \right)}\) & \(\displaystyle -\frac{a}{\sqrt{1-a^2x^2}}\)    \\[8pt]
@@ -109,7 +109,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \hspace*{-1cm}
     \begin{tabular}{c c}
         \toprule
-        \(f\)                        & \(\dv{f}{x}\)                                         \\
+        \(f\)                        & \(\odv{f}{x}\)                                         \\
         \midrule
         \(\sinh{\left( ax \right)}\) & \(a\cosh{\left( ax \right)}\)                         \\
         \(\cosh{\left( ax \right)}\) & \(a\sinh{\left( ax \right)}\)                         \\
@@ -121,7 +121,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \end{tabular}
     \begin{tabular}{c c}
         \toprule
-        \(f\)                           & \(\dv{f}{x}\)                               \\
+        \(f\)                           & \(\odv{f}{x}\)                               \\
         \midrule
         \(\arcsinh{\left( ax \right)}\) & \(\displaystyle \frac{a}{\sqrt{1+a^2x^2}}\) \\[8pt]
         \(\arccosh{\left( ax \right)}\) & \(\displaystyle \frac{a}{\sqrt{1-a^2x^2}}\) \\[8pt]
@@ -130,7 +130,7 @@ Let \(f(x)\) be a function, and \(a\in\mathbb{R}\) be a constant.
     \end{tabular}
     \begin{tabular}{c c}
         \toprule
-        \(f\)                           & \(\dv{f}{x}\)                                                             \\
+        \(f\)                           & \(\odv{f}{x}\)                                                             \\
         \midrule
         \(\arccoth{\left( ax \right)}\) & \(\displaystyle  \frac{a}{1-a^2x^2}\)                                     \\[8pt]
         \(\arcsech{\left( ax \right)}\) & \(\displaystyle -\frac{1}{a\left( 1+ax \right)\sqrt{\frac{1-ax}{1+ax}}}\) \\[8pt]
@@ -184,13 +184,13 @@ Dividing by either the sine or cosine function gives:
 \subsection{Integration by Parts}
 \begin{theorem}
     \begin{equation*}
-        \int u \dd{v} = uv - \int v \dd{u}
+        \int u \odif{v} = uv - \int v \odif{u}
     \end{equation*}
 \end{theorem}
 \subsection{Integration by Substitution}
 \begin{theorem}
     \begin{equation*}
-        \int f\bigl(g\left( x \right)\bigr)\dv{g(x)}{x} \dd{x} = \int f(u) \dd{u}, \: \text{where } u = g(x)
+        \int f\bigl(g\left( x \right)\bigr)\odv{g(x)}{x} \odif{x} = \int f(u) \odif{u}, \: \text{where } u = g(x)
     \end{equation*}
 \end{theorem}
 \subsection{Trigonometric Substitutions}
@@ -256,7 +256,7 @@ Dividing by either the sine or cosine function gives:
     \end{equation*}
     exists. When this limit exists, it defines the derivative
     \begin{equation*}
-        \left.\dv{f}{x}\right|_{x=x_0} = \lim_{h\to 0} \frac{f(x_0+h)-f(x_0)}{h}
+        \left.\odv{f}{x}\right|_{x=x_0} = \lim_{h\to 0} \frac{f(x_0+h)-f(x_0)}{h}
     \end{equation*}
 \end{theorem}
 \begin{theorem}
@@ -270,7 +270,7 @@ Dividing by either the sine or cosine function gives:
     If \(f(x)\) is continuous on \(I:\left[ a,\:b \right]\) and differentiable on
     \(I\), then there exists a point \(c\in I\) such that
     \begin{equation*}
-        \left.\dv{f}{x}\right|_{x=c}=\frac{f(b)-f(a)}{b-a}
+        \left.\odv{f}{x}\right|_{x=c}=\frac{f(b)-f(a)}{b-a}
     \end{equation*}
 \end{theorem}
 \newpage
@@ -279,7 +279,7 @@ Dividing by either the sine or cosine function gives:
     If \(f(x)\) is continuous on an interval \(I:\left[ a,\:b \right]\), then the
     net signed area \(A\) between the graph of \(f(x)\) and the interval \(I\) is
     \begin{equation*}
-        A = \int_a^b f(x) \dd{x}
+        A = \int_a^b f(x) \odif{x}
     \end{equation*}
 \end{theorem}
 \begin{tcolorboxlarge}[title={Properties of Definite Integrals}]
@@ -287,11 +287,11 @@ Dividing by either the sine or cosine function gives:
         Suppose that \(f(x)\) and \(g(x)\) are continuous on the interval \(I\),
         with \(a,\:b,\:c\in I\), with \(a < c < b\), and \(k\in\mathbb{R}\) then
         \begin{enumerate}[label=\normalfont\alph*)] % chktex 9 chktex 10
-            \item \(\displaystyle\int_a^a f(x) \dd{x} = 0\).
-            \item \(\displaystyle\int_a^b f(x) \dd{x} = -\int_b^a f(x) \dd{x}\).
-            \item \(\displaystyle\int_a^b kf(x) \dd{x} = k\int_a^b f(x) \dd{x}\).
-            \item \(\displaystyle\int_a^b \bigl(f(x) \pm g(x)\bigr) \dd{x} = \int_a^b f(x) \dd{x} \pm \int_a^b g(x) \dd{x}\).
-            \item \(\displaystyle\int_a^b f(x) \dd{x} = \int_a^c f(x) \dd{x} + \int_c^b f(x) \dd{x}\).
+            \item \(\displaystyle\int_a^a f(x) \odif{x} = 0\).
+            \item \(\displaystyle\int_a^b f(x) \odif{x} = -\int_b^a f(x) \odif{x}\).
+            \item \(\displaystyle\int_a^b kf(x) \odif{x} = k\int_a^b f(x) \odif{x}\).
+            \item \(\displaystyle\int_a^b \bigl(f(x) \pm g(x)\bigr) \odif{x} = \int_a^b f(x) \odif{x} \pm \int_a^b g(x) \odif{x}\).
+            \item \(\displaystyle\int_a^b f(x) \odif{x} = \int_a^c f(x) \odif{x} + \int_c^b f(x) \odif{x}\).
         \end{enumerate}
     \end{theorem}
 \end{tcolorboxlarge}
@@ -300,7 +300,7 @@ Dividing by either the sine or cosine function gives:
     Let \(A\) be the area under \(f(x)\) on the interval \(\left[ a,\:b \right]\),
     then
     \begin{equation*}
-        \int_a^b f(x) \dd{x} = \lim_{\max{\Delta x_k}\to 0} \sum_{k=1}^n f(x_k) \Delta x_k
+        \int_a^b f(x) \odif{x} = \lim_{\max{\Delta x_k}\to 0} \sum_{k=1}^n f(x_k) \Delta x_k
     \end{equation*}
     where \(n\) is the number of rectangles, \(x_k\) is the centre of the rectangle
     \(k\), and \(\Delta x_k\) is the width of the rectangle \(k\). If every rectangle
@@ -317,22 +317,22 @@ infinite series (definite integrals) and antiderivatives
     If \(f(x)\) is continuous on \(\left[ a,\:b \right]\) and \(F\) is any
     antiderivative of \(f\) on \(\left[ a,\:b \right]\) then
     \begin{equation*}
-        \int_a^b f(x)\dd{x} = F(b) - F(a)
+        \int_a^b f(x)\odif{x} = F(b) - F(a)
     \end{equation*}
     Equivalently
     \begin{equation*}
-        \int_a^b \dv{x}F(x) \dd{x} = F(b) - F(a) \equiv \left.F(x)\right|_a^b
+        \int_a^b \odv{x}F(x) \odif{x} = F(b) - F(a) \equiv \left.F(x)\right|_a^b
     \end{equation*}
 \end{theorem}
 \begin{theorem}[The Fundamental Theorem of Calculus: Part 2]
     If \(f(x)\) is continuous on \(I\) then it has an antiderivative on \(I\). In
     particular, if \(a\in I\), then the function \(F\) defined by
     \begin{equation*}
-        F(x) = \int_a^x f(t)\dd{t}
+        F(x) = \int_a^x f(t)\odif{t}
     \end{equation*}
     is an antiderivative of \(f(x)\). That is,
     \begin{equation*}
-        \dv{x}F(x) = f(x) \equiv \dv{x}\int_a^x f(t) \dd{t} = f(x)
+        \odv{x}F(x) = f(x) \equiv \odv{x}\int_a^x f(t) \odif{t} = f(x)
     \end{equation*}
 \end{theorem}
 \begin{theorem}
@@ -628,7 +628,7 @@ Recognising continuous functions:
         \symbf{H} =
         \mqty[
         \partial^2_{x_1} & \cdots & \partial_{x_n x_1} \\
-        \vdots & \ddots & \vdots \\
+        \vdots & \odifots & \vdots \\
         \partial_{x_1x_n} & \cdots & \partial^2_{x_n}
         ]
     \end{equation*}
@@ -637,7 +637,7 @@ Recognising continuous functions:
         \symbf{H}_f =
         \mqty[
         \partial^2_{x_1}f & \cdots & \partial_{x_n x_1}f \\
-        \vdots & \ddots & \vdots \\
+        \vdots & \odifots & \vdots \\
         \partial_{x_1x_n}f & \cdots & \partial^2_{x_n}f
         ]
     \end{equation*}
@@ -686,7 +686,7 @@ The nature of a critical point can be classified using the second derivative tes
     \hyperref[eq:volume_under_2d_function]{Equation~\ref{eq:volume_under_2d_function}}
     are also called Riemann sums, and the limit is denoted as
     \begin{equation*}
-        \iint\limits_{\Omega} f(x,\: y)  \dd{A}
+        \iint\limits_{\Omega} f(x,\: y)  \odif{A}
         = \sum_{k=1}^{\infty} f(x_k^\ast,\: y_k^\ast) \Delta A_k
     \end{equation*}
 \end{definition}
@@ -695,19 +695,19 @@ The nature of a critical point can be classified using the second derivative tes
         Suppose that \(f(x,\: y) \) and \(g(x,\: y)\) are continuous on \(\Omega\),
         and \(\Omega\) can be subdivided into \(\Omega_1\) and \(\Omega_2\), then
         \begin{enumerate}[label=\normalfont\alph*)] % chktex 9 chktex 10
-            \item $\displaystyle\iint\limits_\Omega kf(x,\: y) \dd{A}
-                      = k\iint\limits_\Omega f(x,\: y) \dd{A}$.
-            \item $\displaystyle\iint\limits_\Omega f(x,\: y) + g(x,\: y) \dd{A}
-                      = \iint\limits_\Omega f(x,\: y) \dd{A} + \iint\limits_\Omega g(x,\: y) \dd{A}$.
-            \item $\displaystyle\iint\limits_\Omega f(x,\: y) \dd{A}
-                      = \iint\limits_{\Omega_1} f(x,\: y) \dd{A} + \iint\limits_{\Omega_2} f(x,\: y) \dd{A}$.
+            \item $\displaystyle\iint\limits_\Omega kf(x,\: y) \odif{A}
+                      = k\iint\limits_\Omega f(x,\: y) \odif{A}$.
+            \item $\displaystyle\iint\limits_\Omega f(x,\: y) + g(x,\: y) \odif{A}
+                      = \iint\limits_\Omega f(x,\: y) \odif{A} + \iint\limits_\Omega g(x,\: y) \odif{A}$.
+            \item $\displaystyle\iint\limits_\Omega f(x,\: y) \odif{A}
+                      = \iint\limits_{\Omega_1} f(x,\: y) \odif{A} + \iint\limits_{\Omega_2} f(x,\: y) \odif{A}$.
         \end{enumerate}
     \end{theorem}
 \end{tcolorboxlarge}
 \subsection{Rectangular Regions}
 If \(\Omega\) is a region bounded by \(a \leq x \leq b\) and \(c \leq y \leq d\), then
 \begin{equation*}
-    \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_c^d\int_a^b f(x,\: y) \dd{x} \dd{y} = \int_a^b\int_c^d f(x,\: y) \dd{y} \dd{x}
+    \iint\limits_{\Omega} f(x,\: y) \odif{A} = \int_c^d\int_a^b f(x,\: y) \odif{x} \odif{y} = \int_a^b\int_c^d f(x,\: y) \odif{y} \odif{x}
 \end{equation*}
 \subsection{Nonrectangular Regions}
 If the limits of integration depend on the variable \(x\) or \(y\), then the region
@@ -720,7 +720,7 @@ If the region is:
 \end{description}
 where \(g_1(x) \leq g_2(x)\) for \(a \leq x \leq b\), then
 \begin{equation*}
-    \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_a^b\int_{g_1(x)}^{g_2(x)} f(x,\: y) \dd{y} \dd{x}.
+    \iint\limits_{\Omega} f(x,\: y) \odif{A} = \int_a^b\int_{g_1(x)}^{g_2(x)} f(x,\: y) \odif{y} \odif{x}.
 \end{equation*}
 \subsubsection{Type II Regions}
 If the region is:
@@ -730,13 +730,13 @@ If the region is:
 \end{description}
 where \(h_1(y) \leq h_2(y)\) for \(c \leq y \leq d\), then
 \begin{equation*}
-    \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_c^d\int_{h_1(y)}^{h_2(y)} f(x,\: y) \dd{x} \dd{y}.
+    \iint\limits_{\Omega} f(x,\: y) \odif{A} = \int_c^d\int_{h_1(y)}^{h_2(y)} f(x,\: y) \odif{x} \odif{y}.
 \end{equation*}
 \subsection{Polar Coordinates}
 To determine the area of a region defined using polar coordinates,
 the function can be integrated w.r.t.\ the radius \(r\), and the angle \(\theta\).
 \begin{equation*}
-    \iint\limits_{\Omega} f(r,\: \theta) \dd{A} = \int_{\theta_1}^{\theta_2}\int_{r_1(\theta)}^{r_2(\theta)} f\left(r,\: \theta\right) r \dd{r} \dd{\theta}.
+    \iint\limits_{\Omega} f(r,\: \theta) \odif{A} = \int_{\theta_1}^{\theta_2}\int_{r_1(\theta)}^{r_2(\theta)} f\left(r,\: \theta\right) r \odif{r} \odif{\theta}.
 \end{equation*}
 \subsection{Volume of a Three Variable Function}
 \begin{definition}
@@ -764,7 +764,7 @@ the function can be integrated w.r.t.\ the radius \(r\), and the angle \(\theta\
     \hyperref[eq:volume_of_3d_function]{Equation~\ref{eq:volume_of_3d_function}}
     are also called Riemann sums, and the limit is denoted as
     \begin{equation*}
-        \iiint\limits_{\Omega} f(x,\: y,\: z)  \dd{V}
+        \iiint\limits_{\Omega} f(x,\: y,\: z)  \odif{V}
         = \sum_{k=1}^{\infty} f(x_k^\ast,\: y_k^\ast,\: z_k^\ast) \Delta V_k
     \end{equation*}
 \end{definition}
@@ -773,12 +773,12 @@ the function can be integrated w.r.t.\ the radius \(r\), and the angle \(\theta\
         Suppose that \(f(x,\: y,\: z) \) and \(g(x,\: y,\: z)\) are continuous on \(\Omega\),
         and \(\Omega\) can be subdivided into \(\Omega_1\) and \(\Omega_2\) then
         \begin{enumerate}[label=\normalfont\alph*)] % chktex 9 chktex 10
-            \item $\displaystyle\iiint\limits_\Omega kf(x,\: y,\: z) \dd{V}
-                      = k\iiint\limits_\Omega f(x,\: y,\: z) \dd{V}$.
-            \item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) + g(x,\: y,\: z) \dd{V}
-                      = \iiint\limits_\Omega f(x,\: y,\: z) \dd{V} + \iiint\limits_\Omega g(x,\: y,\: z) \dd{V}$.
-            \item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) \dd{V}
-                      = \iiint\limits_{\Omega_1} f(x,\: y,\: z) \dd{V} + \iiint\limits_{\Omega_2} f(x,\: y,\: z) \dd{V}$.
+            \item $\displaystyle\iiint\limits_\Omega kf(x,\: y,\: z) \odif{V}
+                      = k\iiint\limits_\Omega f(x,\: y,\: z) \odif{V}$.
+            \item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) + g(x,\: y,\: z) \odif{V}
+                      = \iiint\limits_\Omega f(x,\: y,\: z) \odif{V} + \iiint\limits_\Omega g(x,\: y,\: z) \odif{V}$.
+            \item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) \odif{V}
+                      = \iiint\limits_{\Omega_1} f(x,\: y,\: z) \odif{V} + \iiint\limits_{\Omega_2} f(x,\: y,\: z) \odif{V}$.
         \end{enumerate}
     \end{theorem}
 \end{tcolorboxlarge}
@@ -823,14 +823,14 @@ the function can be integrated w.r.t.\ the radius \(r\), and the angle \(\theta\
 \begin{theorem}[Derivatives of VVFs]
     The derivative of a VVF is the vector of the derivatives of its components.
     \begin{equation*}
-        \dv{t}\symbf{r}(t) = \avec[\Bigg]{\dv{t}x(t),\: \dv{t}y(t),\: \dv{t}z(t)}
+        \odv{t}\symbf{r}(t) = \avec[\Bigg]{\odv{t}x(t),\: \odv{t}y(t),\: \odv{t}z(t)}
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Integration of VVFs]
     The integral of a VVF is the vector of the integrals of its components.
     \begin{equation*}
-        \int\symbf{r}(t)\dd{t}
-        = \avec[\Bigg]{\int x(t) \dd{t},\: \int y(t) \dd{t},\: \int z(t) \dd{t}}
+        \int\symbf{r}(t)\odif{t}
+        = \avec[\Bigg]{\int x(t) \odif{t},\: \int y(t) \odif{t},\: \int z(t) \odif{t}}
     \end{equation*}
 \end{theorem}
 \begin{remark}
@@ -881,7 +881,7 @@ the function can be integrated w.r.t.\ the radius \(r\), and the angle \(\theta\
     The arc length \(S\) of a smooth continuous VVF \(\symbf{r}(t)\), is the distance along \(\symbf{r}(t)\)
     between \(t=a\) and \(t=b\), defined by
     \begin{equation*}
-        S = \int_a^b \norm{\symbf{r'}(t)} \dd{t}
+        S = \int_a^b \norm{\symbf{r'}(t)} \odif{t}
     \end{equation*}
 \end{definition}
 \newpage
@@ -919,7 +919,7 @@ By \linebreak computing fixed points, we can draw a phase line diagram, and sket
 
 For the autonomous differential equation
 \begin{equation*}
-    \dv{y}{t} = f(y)
+    \odv{y}{t} = f(y)
 \end{equation*}
 \begin{definition}[Fixed Point]
     A fixed point is the value of \(y\) for which \(f(y) = 0\).
@@ -958,37 +958,37 @@ For the autonomous differential equation
 \subsection{Directly Integrable ODEs}
 For a differential equation of the form
 \begin{equation*}
-    \dv{y}{x} = f(x)
+    \odv{y}{x} = f(x)
 \end{equation*}
 \begin{equation*}
-    y(x) = \int f(x) \dd{x}.
+    y(x) = \int f(x) \odif{x}.
 \end{equation*}
 \subsection{Separable ODEs}
 For a differential equation of the form
 \begin{equation*}
-    \dv{y}{x} = p(x) q(y),
+    \odv{y}{x} = p(x) q(y),
 \end{equation*}
 a separation of variables followed by an integration w.r.t. \(x\) yields an implicit solution.
 \begin{equation*}
-    \int \frac{1}{q(y)} \dv{y}{x} \dd{x} = \int p(x) \dd{x}.
+    \int \frac{1}{q(y)} \odv{y}{x} \odif{x} = \int p(x) \odif{x}.
 \end{equation*}
 \subsection{Linear ODEs}
 For a differential equation of the form
 \begin{equation*}
-    \dv{y}{x} + p(x)y = q(x)
+    \odv{y}{x} + p(x)y = q(x)
 \end{equation*}
 we can use the integrating factor
 \begin{equation*}
-    I(x) = e^{\int p(x) \dd{x}}
+    I(x) = e^{\int p(x) \odif{x}}
 \end{equation*}
 so that
 \begin{equation*}
-    y(x) = \frac{1}{I(x)} \int I(x) q(x) \dd{x}
+    y(x) = \frac{1}{I(x)} \int I(x) q(x) \odif{x}
 \end{equation*}
 \subsection{Exact ODEs}
 A differential equation of the form
 \begin{equation*}
-    P(x,\: y) + Q(x,\: y)\dv{y}{x} = 0
+    P(x,\: y) + Q(x,\: y)\odv{y}{x} = 0
 \end{equation*}
 has the solution
 \begin{equation*}
@@ -1000,8 +1000,8 @@ iff it is exact, namely when
 \end{equation*}
 where \(P = \Psi_x\) and \(Q = \Psi_y\). Then
 \begin{gather*}
-    \Psi(x,\: y) = \int P(x,\: y) \dd{x} + f(y) \\
-    \Psi(x,\: y) = \int Q(x,\: y) \dd{y} + g(x)
+    \Psi(x,\: y) = \int P(x,\: y) \odif{x} + f(y) \\
+    \Psi(x,\: y) = \int Q(x,\: y) \odif{y} + g(x)
 \end{gather*}
 and \(f(y)\) and \(g(x)\) can be determined by solving these equations simultaneously.
 \newpage
@@ -1054,7 +1054,7 @@ The second solution is of the form
 \subsection{Homogeneous ODEs}
 A second-order constant-coefficient homogeneous ODE
 \begin{equation*}
-    a_2\dv[2]{y}{x} + a_1\dv{y}{x} + a_0y = 0
+    a_2\odv[2]{y}{x} + a_1\odv{y}{x} + a_0y = 0
 \end{equation*}
 has solutions of the form
 \begin{equation*}
@@ -1097,11 +1097,11 @@ has a general solutions of the form
 \end{equation*}
 where \(y_H(x)\) satisfies
 \begin{equation*}
-    a_2\dv[2]{y_H}{x} + a_1\dv{y_H}{x} + a_0y_H = 0
+    a_2\odv[2]{y_H}{x} + a_1\odv{y_H}{x} + a_0y_H = 0
 \end{equation*}
 and \(y_P(x)\) satisfies
 \begin{equation*}
-    a_2\dv[2]{y_P}{x} + a_1\dv{y_P}{x} + a_0y_P = F(x)
+    a_2\odv[2]{y_P}{x} + a_1\odv{y_P}{x} + a_0y_P = F(x)
 \end{equation*}
 \subsection{Method of Undetermined Coefficients}
 To find the particular solution \(y_P\), we must choose a likely
@@ -1161,22 +1161,22 @@ in order to form a \textit{fundamental set of solutions}.
 \subsubsection{Electrical Circuits}
 Current \(i\) is defined as the rate of change of charge \(q\)
 \begin{equation*}
-    i = \dv{q}{t}
+    i = \odv{q}{t}
 \end{equation*}
 The voltage drop across various elements is given below:
 \begin{description}
     \item[Voltage drop across a resistor:] \(iR\)
     \item[Voltage drop across a capacitor:] \(q/C\)
-    \item[Voltage drop across an inductor:] \(L \dv{i}{t}\)
+    \item[Voltage drop across an inductor:] \(L \odv{i}{t}\)
 \end{description}
-where \(R\) is the resistance measured in Ohms (\si{\ohm}),
-\(C\) is the capacitance measured in Farads (\si{\farad}),
-and \(L\) is the inductance measured in Henrys (\si{\henry}).
+where \(R\) is the resistance measured in Ohms (\unit{\Omega}),
+\(C\) is the capacitance measured in Farads (\unit{F}),
+and \(L\) is the inductance measured in Henrys (\unit{H}).
 
 Kirchhoff's Voltage law states that the sum of voltages around a loop equals 0.
-Therefore in an RLC circuit, with a voltage source supplying \(v(t)\si{\volt}\),
+Therefore in an RLC circuit, with a voltage source supplying \(v(t)\unit{V}\),
 \begin{align*}
-    v(t) - iR - L \dv{i}{t} - \frac{q}{C}      & = 0     \\
-    L \dv[2]{q}{t} + R\dv{q}{t} + \frac{1}{C}q & = v(t).
+    v(t) - iR - L \odv{i}{t} - \frac{q}{C}      & = 0     \\
+    L \odv[2]{q}{t} + R\odv{q}{t} + \frac{1}{C}q & = v(t).
 \end{align*}
 \end{document} % chktex 17
